# shibim-rust

./: .gitignore  Cargo.toml  README.md
src/: data.rs  html.rs  lst.pest  main.rs  shb.pest
