[package]
name = "shibim"
version = "0.1.0"
authors = ["ali solin <gerar1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
markup = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_cbor = "0.11"